fix: z-index of tooltip

--- a/src/assets/themes/main/components/tooltip.scss
+++ b/src/assets/themes/main/components/tooltip.scss
@@ -1,6 +1,5 @@
 .tooltip__container {
-  @apply absolute p-4  rounded-lg bg-white shadow-2xl z-20 opacity-0 transition-all duration-300 box-border;
-  display: flex;
+  @apply absolute p-4  rounded-lg bg-white shadow-2xl -z-10 opacity-0 transition-all duration-300 box-border flex ;
 
 }
 
@@ -73,7 +72,7 @@
 }
 
 .tooltip__component:has(.tooltip__component__slot:hover) .tooltip__container {
-  @apply opacity-100
+  @apply z-20 opacity-100
 }
 
 .show {
